syntax = "proto3";

package api.template;

import "google/api/annotations.proto";

option go_package = "layout_template/api/template;template";
option java_multiple_files = true;
option java_package = "api.template";

service Template {
	rpc CreateTemplate (CreateTemplateRequest) returns (CreateTemplateReply){
		option (google.api.http) = {
			post: "/template/{sid}/create"
			body: "realName"
		};
	};
	rpc QueryTemplate (QueryTemplateRequest) returns (QueryTemplateReply){
		option (google.api.http) = {
			get: "/template/{sid}/query"
		};
	};
}

message CreateTemplateRequestBody {
	string name = 1;
}
message CreateTemplateRequest {
	string sid = 1;
	CreateTemplateRequestBody realName = 2;
}
message CreateTemplateReply {
	string message = 1;
}

message QueryTemplateRequest {
	string sid = 1;
	string name = 2;
}
message QueryTemplateReply {
	string message = 1;
}