syntax = "proto3";
package kratos.api;

option go_package = "layout_template/internal/conf/template_config;template_config";

import "google/protobuf/duration.proto";
import "standard_logger_pb/standard_logger_pb.proto";

message Config {
  LoggerConfig loggerCfg = 1;
  ServerConfig serverCfg = 2;
  DataSourceCfg dataSourceCfg = 3;
}

message LoggerConfig {
  standard_logger_pb.LoggerConfig systemLoggerCfg = 1;
  standard_logger_pb.GormTracingConfig mysqlTracingCfg = 2;
}

message ServerConfig {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message DataSourceCfg {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}
